# Jain-Exam-Results-Portal

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile.backend  main.py  pyproject.toml  requirements.txt  test.db  test_clean.db  venv_setup.sh
backend/app/: __init__.py  main.py
backend/app/data/: RESULT.xlsx  results.db
backend/app/db/: database.py  models.py
backend/app/routers/: auth.py  certificate.py  cities.py  data.py  meritlist.py
backend/app/schemas/: auth.py  cities.py  data.py  meritlist.py
backend/app/utils/: auth.py
frontend/: .env  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.scss
frontend/src/component/: Confetti.jsx  header.jsx  header.scss
frontend/src/pages/: AdminPage.jsx  AdminPage.scss  AnswerKeyPage.jsx  AnswerKeyPage.scss  Certificate.jsx  Certificate.scss  CertificatePage.jsx  CertificatePage.scss  CreatePage.jsx  CreatePage.scss  HomePage.jsx  HomePage.scss  MeritListPage.jsx  MeritListPage.scss  Result.jsx  Result.scss
frontend_v2/: .env  Dockerfile.frontend  package-lock.json  package.json
frontend_v2/src/: App.css  App.js
frontend_v2/src/pages/: AdminPage.jsx  AdminPage.scss  CertificatePage.jsx  CertificatePage.scss
