[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.1",
    "passlib==1.7.4",
    "pydantic==2.6.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "uvicorn==0.27.0",
]

#[build-system]
#requires = ["setuptools>=42"]
#build-backend = "setuptools.build_meta"
#
#[tool.setuptools]
#packages = ["app", "app.db", "app.routers", "app.schemas", "app.utils"]
